// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Query: getDef works in query files 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 8,
  },
  "path": "/tmp/gql-test/cea177fe6871639bb5c6dbbece975dc5a7f9a15c/schema/schema.gql",
  "start": Object {
    "column": 9,
    "line": 6,
  },
}
`;

exports[`Schema: getDef works in schema files 1`] = `
Object {
  "end": Object {
    "column": 10,
    "line": 8,
  },
  "path": "/tmp/gql-test/4dae3772d2ca36e740891e5aa5ddb39c57c0712b/schema/schema.gql",
  "start": Object {
    "column": 9,
    "line": 6,
  },
}
`;
